# v6502

./: .gitignore  .lcovrc  README.md  flake.nix  meson.build  meson.options
.github/workflows/: build-test.yml
example/: klaustest.cpp  loadram.cpp  main.cpp  nestest.cpp  wozmontest.cpp
example/asm/: Makefile  README.md  fun.asm  jumps.asm  klaus-functional.asm  loadram.cfg  printstring.asm  wozmon.asm
inc/cpu/: cpu.h  opcodes.h
inc/private/v6502/: opcodes.h  print.h
inc/v6502/: cpu.h  internal.h  memory.h  modes.h  opcodeMap.h  opcodes.h  print.h
src/: cpu.cpp  internal.cpp  opcodes.cpp
src/cpu/: cpu.cpp  opcodes.cpp
src/cpu/opcodes/: ctrl.cpp  flags.cpp  load.cpp  loads.cpp  logic.cpp  stack.cpp  stores.cpp
src/opcodes/: arith.cpp  branch.cpp  ctrl.cpp  flags.cpp  inc.cpp  load.cpp  logic.cpp  nop.cpp  shift.cpp  stack.cpp  trans.cpp
tests/: cpuFixture.cpp  cpuFixture.h  gtest_main.cpp  meson.build
tests/bugs/: cmp.cpp  cmp_immediate_3a_works.cpp
tests/instructions/arith/: adc-1-7f.cpp  adc-1-ff.cpp  adc-1.cpp  adc-80.cpp  cmp-3a-3a.cpp  sbc-1-02.cpp  sbc-1-80.cpp  sbc-1.cpp  sbc-fe-7f.cpp
tests/instructions/branch/: bcc-clear.cpp  bcc-set.cpp  bcs-clear.cpp  bcs-set.cpp  beq-clear.cpp  beq-set.cpp  bmi-clear.cpp  bmi-set.cpp  bne-clear.cpp  bne-set.cpp  bpl-clear.cpp  bpl-set.cpp  bvc-clear.cpp  bvc-set.cpp  bvs-clear.cpp  bvs-set.cpp
tests/instructions/shift/: asl-a-80.cpp  rol-sec.cpp
tests/lib/: testMain.cpp  testMain.h
